--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GEMINI_API_KEY=AIzaSyCBGd8zKmZAwGvY_cAWlqWJn-TZM_-L_D0
-YOUTUBE_CLIENT_ID=224607989736-5rudas6htfmgcfbusto4mq4fmst9g0oq.apps.googleusercontent.com
+GEMINI_API_KEY=XXX
+YOUTUBE_CLIENT_ID=XXX
 OLLAMA_ORIGINS="https://ollama.com" # You can add more origins separated by spaces
