--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
-
 {
   "name": "kollektiv",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mindturbulence/Kollektiv.git"
+  },
+  "homepage": "https://mindturbulence.github.io/Kollektiv/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "lint": "tsc --noEmit",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@google/genai": "^1.12.0",
-    "uuid": "^9.0.1",
-    "jszip": "^3.10.1",
-    "idb": "^8.0.0",
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
-    "gsap": "^3.12.5"
+    "@google/genai": "^1.12.0",
+    "@types/uuid": "^10.0.0",
+    "gsap": "^3.12.5",
+    "idb": "^8.0.0",
+    "jszip": "^3.10.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
@@ -28,6 +36,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
